# zap

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README.zh.md  _zap_build_meta.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build_workflow.py
tests/: conftest.py  test_action.py  test_favicon.py  test_favicon_more.py  test_web_server.py  test_zap_cli.py  test_zap_core.py
workflow/: README.md  action.py  favicon.py  info.plist  zap.py
workflow/web/: __init__.py  server.py
workflow/web/static/: app.js  index.html  styles.css
