[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zap-workflow"
version = "0.3.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["taskipy>=1.11.0", "pytest>=8"]

[tool.setuptools]
py-modules = ["_zap_build_meta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["workflow"]

[tool.taskipy.tasks]
pack = "python scripts/build_workflow.py --channel test"
release = "python scripts/build_workflow.py --channel release"
clean = "rm -rf dist/zap-workflow dist/zap.alfredworkflow dist/zap.zip dist/zap-*-workflow dist/zap-*.alfredworkflow"
